IMPALA-1835, IMPALA-1851: Keep the fragment alive for TransmitData()

If the destination fragment of TransmitData() is destroyed before
TransmitData() completes, at least two bad things can happen. (1) Runtime
profile counters may be updated after they have been destroyed
(IMPALA-1835). (2) The DataStreamRecvr's MemTracker may try to
unregister from the fragment's MemTracker after it has been destroyed
(IMPALA-1851). To prevent TransmitData() from accessing deleted memory,
a shared_ptr to the FragmentExecState will be obtained for the duration
of TransmitData().

Change-Id: Id9c15cd39fd9fa4c0a2bb75a20a9f16034a6a4ee
Reviewed-on: http://gerrit.cloudera.org:8080/217
Reviewed-by: Casey Ching <casey@cloudera.com>
Tested-by: Internal Jenkins